<resources>
    <string name="app_name">ALC4</string>
    <string name="title_activity_main">ALC 4 Phase 1</string>
    <string name="title_activity_about">About ALC</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name">James Eissah Aidoo</string>
    <string name="alc_track">Android</string>
    <string name="country">Ghana</string>
    <string name="email">jamesaidooessah@gmail.com</string>
    <string name="phone_number">233 57 609 5478</string>
    <string name="slack_username">James Aidoo Eissah</string>
    <string name="welcome_text">Welcome to ALC 4.0</string>
    <string name="profile_button_text">My Profile</string>
    <string name="about_button_text">ABOUT ALC</string>
    <string name="header_personal_info">Personal Info</string>
    <string name="header_track_info">Track and Channel Info</string>
</resources>
