<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_profile"
        tools:context=".ProfileActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="224dp" tools:srcCompat="@drawable/pic"
            android:id="@+id/imageView_profile_pic" android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:scaleType="fitCenter" android:contentDescription="@string/profile_picture"
            app:srcCompat="@drawable/pic" android:cropToPadding="true"/>
    <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView_profile_pic" android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:lineSpacingExtra="8sp"
            android:typeface="serif" android:id="@+id/textView2"/>
    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" tools:visibility="visible" android:layout_marginTop="5dp"/>
    <TextView
            android:text="@string/alc_track"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_track" app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="@+id/divider" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:typeface="serif"/>
    <TextView
            android:text="@string/country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_country" app:layout_constraintEnd_toEndOf="@+id/text_track"
            app:layout_constraintStart_toStartOf="@+id/text_track"
            app:layout_constraintTop_toBottomOf="@+id/text_track" android:layout_marginTop="8dp"
            android:typeface="serif" android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <TextView
            android:text="@string/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_email"
            app:layout_constraintTop_toBottomOf="@+id/text_country" app:layout_constraintEnd_toEndOf="@+id/text_country"
            app:layout_constraintStart_toStartOf="@+id/text_country" android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:typeface="serif"/>
    <TextView
            android:text="@string/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_phone_number" app:layout_constraintEnd_toEndOf="@+id/text_email"
            app:layout_constraintStart_toStartOf="@+id/text_email" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:typeface="serif"/>
    <TextView
            android:text="@string/slack_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_slack_username" app:layout_constraintEnd_toEndOf="@+id/text_phone_number"
            app:layout_constraintStart_toStartOf="@+id/text_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/text_phone_number" android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:typeface="serif"/>
</androidx.constraintlayout.widget.ConstraintLayout>