<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <Button
            android:text="@string/about_button_text"
            android:layout_width="382dp"
            android:layout_height="64dp"
            android:id="@+id/buton_about" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textStyle="bold"
            android:textColor="#000000" android:typeface="sans" style="@style/ButtonAppearance"
            android:onClick="goToAboutPage" android:textAlignment="center" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView" android:shadowRadius="10"/>
    <Button
            android:text="@string/profile_button_text"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:id="@+id/button_profile"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/buton_about" app:layout_constraintEnd_toEndOf="@+id/buton_about"
            app:layout_constraintStart_toStartOf="@+id/buton_about" android:textColor="#000000"
            android:textStyle="bold" android:typeface="sans"
            style="@style/ButtonAppearance" android:textSize="22sp" android:onClick="viewProfile"
            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.529"
    />
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:cardCornerRadius="6dp" app:contentPadding="36dp"
            app:cardElevation="4dp" app:cardUseCompatPadding="true" android:id="@+id/cardView"
            android:layout_marginTop="32dp" app:cardBackgroundColor="@color/colorPrimary">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/welcome_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:typeface="normal" android:textAlignment="center" android:textStyle="bold"
                    android:textSize="30sp" android:textColor="#ffffff"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>